# pytorch-ddp-samples

./: .gitignore  how_to_ddp_trian.txt  mnist_accelerate.py  pyproject.toml  test-1to4node1.sh
