[project]
name = "ddp"
version = "0.1.0"
description = ""
dependencies = [
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
    "deepspeed>=0.16.1",
    "mpi4py>=4.0.1",
    "mlflow>=2.19.0",
    "accelerate>=1.2.1",
    "lightning>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ddp"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
type = "index"
